syntax = "proto3";

option csharp_namespace = "Proto.Notifications.Note";

import "google/protobuf/timestamp.proto";
import "DTO/trace_data.proto";

service NotificationService {
  rpc SendNoteCreated(NoteCreatedNotification) returns (NotificationResponse);
  rpc SendNoteUpdated(NoteUpdatedNotification) returns (NotificationResponse);
}

service NoteNotificationService {
  rpc SubscribeNoteNotifications(SubscribeRequest) returns (stream NoteNotification);
}

message NoteNotification {
  oneof notification {
    NoteCreatedNotification noteCreated = 1;
    NoteUpdatedNotification noteUpdated = 2;
  }
}

message SubscribeRequest {
}

message NoteCreatedNotification {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
  string ticketId = 5;
  google.protobuf.Timestamp  timeStamp = 6;
  TraceDataProto traceData = 7;
}

message NoteUpdatedNotification {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
  TraceDataProto traceData = 5;
}

message NotificationResponse {
  bool success = 1;
}
